@@ -1,3 +1,8 @@
+Thu Aug 23 20:58:28 HKT 2007 William Brack <wbrack@mmm.com.hk>
+
+	* xpath.c: fixed mlXPathCompOpEvalPositionalPredicate problem
+	  with object caching (bug #469410)
+
 Thu Aug 23 11:28:38 CEST 2007 Daniel Veillard <daniel@veillard.com>
 
 	* xmlschemas.c test/schemas/*455953* result/schemas/bug455953*:
